examples/ingress-resources/external-auth/coffee-minion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-coffee-minion
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/location-snippets: |
      auth_request /_oauth2/auth;
      auth_request_set $auth_user $upstream_http_x_auth_request_user;
      auth_request_set $auth_email $upstream_http_x_auth_request_email;
      proxy_set_header X-Auth-Request-User $auth_user;
      proxy_set_header X-Auth-Request-Email $auth_email;
      error_page 401 = /_oauth2/start?rd=$scheme://$host$request_uri;
spec:
  ingressClassName: nginx
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
